confirmation page mailchimp

--- a/confirmation.html
+++ b/confirmation.html
@@ -19,8 +19,8 @@
 		<!-- Header -->
 			<section id="header" style="height: 700px;">
 				<div class="inner">
-					<h1><strong>Thanks</strong></h1>
-					<p>Please check your inbox and confirm your email address.</p>
+					<h1><strong>Confirmed!</strong></h1>
+					<p>Thanks, we'll keep you updated on all things <strong>Hirely</strong>.</p>
 				</div>
 			</section>
 
