--- a/thanks.html
+++ b/thanks.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Photon by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Hirely</title>
@@ -13,6 +8,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />		
 	</head>
 	<body>
 
@@ -23,8 +19,6 @@
 					<p>Please check your inbox and confirm your email address.</p>
 				</div>
 			</section>
-
-
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
