--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />		
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+		
+			ga('create', 'UA-105805362-1', 'auto');
+			ga('send', 'pageview');
+		
+		</script>
 	</head>
 	<body>
 
@@ -57,7 +67,7 @@
 						</div>
 						<div class="4u$ 12u$(medium)">
 							<span class="image fit"><img src="images/img_3.jpg" alt="" /></span>
-							<h3>Application Status</h3>
+							<h3>Manage Applications</h3>
 							<p>Finally a simple way to keep applicants updated on their status. Whether they didn’t make the cut or are being asked to interview: you can inform them with just one click using Hirely.</p>
 						</div>
 					</div>
